Revision history for Perl distribution Tree::Persist

1.14  2016-08-07T13:10:00
	- Add MIN_PERL_VERSION to Makefile.PL. Such a change is not worth a new release. Push to github.
	- Some tests 'use t::test.pm', so for them add "use lib '.';" so when newer Perls default to
		not having '.' in @INC, the code will still find t/tests.pm.
	- Lower pre-req for Test::More to V 1.001002.

1.13  2016-05-04T08;15:00
	- Correct physical address of Free Software Foundation in LICENSE file. See RT#114149.
		Thanx to Petr Pisar.

1.12  2016-04-27T17:35:00
	- No code changes.
	- Adopt workflow techniques suggested by Kent Fredric. This means a cleaner workdir and a
		much more reliable dist. The latter now has auto-generated MANIFEST and META.* files.

1.11  2016-04-25T09:26:00
	- No code changes.
	- Add LICENSE file.
	- Remove Build.PL.
	- Update MANIFEST.SKIP.
	- Add github repo to Makefile.PL and docs.
	- Fix my licence (sic) mess so all references are to Perl. This involves edits to Makefile.PL
		and LICENSE. See RT#113949. Thanx Kent Fredric.
	- Fix Makefile.PL so modules only used for testing are in TEST_REQUIRES and not PREREQ_PM.
		See RT#113948. Thanx Kent Fredric.
	- Fix README so it more-or-less conforms to the Perl Foundation's guidelines at
		http://www.perlfoundation.org/cpan_licensing_guidelines.

1.10  2013-06-28T10:18:00
	- Add DBD::SQLite to the pre-reqs. It is used for testing when $ENV{DBI_DSN} is not set.
		Some CPAN Testers got syntax errors in the SQL used in t/load_from_db.t and t/save_to_db.t.
		I assume this is because old versions of DBD::SQLite (i.e. SQLite) accepted:
			insert into t (id, x) values (1, 2)
		but not
			insert into t (id, x) values (1, 2), (3, 4).
	- Expand the FAQ slightly, regarding usage of DBD::SQLite.
	- One CPAN Tester is still getting a 'Permission denied' error trying to unlink a temporary file.
		I do not have a fix for this problem (yet).

1.09  2013-06-26T16:05:00